Refactor various command classes to enhance reactive programming support by removing unused JWT headers and improving code clarity.